Fix immense slowness due to llvm bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,17 @@ services:
     # https://stackoverflow.com/a/39150040/6335363
     stdin_open: true # docker run -i
     tty: true        # docker run -t
+    # Only allow 65k files per process (https://stackoverflow.com/a/31474407/6335363)
+    # By default, Docker has a limit of around 2 billion files, which is
+    # problematic as upon detecting errors, LLVM's sanitizers iterate through
+    # all available file descriptors to close everything before exiting,
+    # causing the process to hang for a few minutes.
+    # See issue: https://github.com/llvm/llvm-project/issues/59112
+    ulimits:
+      nofile: 65536
+    # https://stackoverflow.com/a/49735927/6335363
+    cap_add:
+      - "SYS_PTRACE"
     volumes:
       - "./work:/home/ubuntu/work:rw"
       - "./config/ssh:/home/ubuntu/.ssh:rw"
