--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,9 @@
+# docker-compose.yml -- configuration for the 2521 docker image's system
+#
+# This describes how to run the docker image, so that students get a consistent
+# and reliable environment.
+#
+# Author: Maddy Guthridge
 services:
   cs2521:
     build:
@@ -8,7 +14,7 @@ services:
     # https://stackoverflow.com/a/39150040/6335363
     stdin_open: true # docker run -i
     tty: true        # docker run -t
-    # Only allow 65k files per process (https://stackoverflow.com/a/31474407/6335363)
+    # Only allow 500k files per process (https://stackoverflow.com/a/31474407/6335363)
     # By default, Docker has a limit of around 1 billion files, which is
     # problematic as upon detecting errors, LLVM's sanitizers iterate through
     # all available file descriptors to close everything before exiting,
